# postgres-copy-binary

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: CI.yml
postgres-binary-format/: Cargo.toml  pyproject.toml
postgres-binary-format/src/: lib.rs
postgres-copy-binary/: Cargo.toml  pyproject.toml
postgres-copy-binary-extension-module/: Cargo.toml  pyproject.toml
postgres-copy-binary-extension-module/src/: lib.rs
postgres-copy-binary-lib/: Cargo.toml
postgres-copy-binary-lib/src/: lib.rs
postgres-copy-binary-python/: README.md  pyproject.toml
postgres-copy-binary-python/src/postgres_copy_binary/: __init__.py
postgres-copy-binary-rs/src/: lib.rs
postgres-copy-binary/src/: lib.rs
tests/: test_postgres.py
