[package]
name = "postgres-binary-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "postgres_binary_format"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
postgres = { version = "0.19.4", path = "../rust-postgres/postgres" }
postgres-types = { version = "0.2.4", path = "../rust-postgres/postgres-types" }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
tokio-postgres = { version = "0.7.7", path = "../rust-postgres/tokio-postgres" }
