[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "postgres-copy-binary-extension-module"
version = "0.5.0"
requires-python = ">=3.7"
dependencies = ["pyarrow~=11.0.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
