[package]
name = "postgres-copy-binary-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.27"
futures-util = { version = "0.3.27", features = ["sink"] }
postgres-types = "0.2.4"
simple-error = "0.3.0"
tokio = { version = "1.26.0", features = ["io-util"] }
