[package]
name = "postgres-binary-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "postgres_binary_format"
crate-type = ["cdylib"]

[dependencies]
postgres = { version = "0.19.4", path = "../rust-postgres/postgres" }
postgres-types = { version = "0.2.4", path = "../rust-postgres/postgres-types" }
tokio-postgres = { version = "0.7.7", path = "../rust-postgres/tokio-postgres" }

[dependencies.pyo3]
version = "0.18.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
