[package]
name = "postgres-copy-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "postgres_copy_binary"
crate-type = ["cdylib"]

[dependencies]
postgres-copy-binary-rs = { version = "0.1.0", path = "../postgres-copy-binary-rs" }
postgres-types = { version = "0.2.4"}
arrow2 = "0.16.0"
phf = { version = "0.11.1", features = ["macros"] }

[dependencies.pyo3]
version = "0.18.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
